--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.9.1",
   "type": "module",
   "description": "A Rain Radar Map based on the Rainviewer API for the MagicMirror² platform.",
-  "main": "MMM-RAIN-MAP.js",
+  "main": "MMM-RAIN-MAP.cjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jalibu/MMM-RAIN-MAP.git"
