--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mmm-rain-map",
   "version": "2.9.1",
-  "type": "module",
+  "type": "commonjs",
   "description": "A Rain Radar Map based on the Rainviewer API for the MagicMirror² platform.",
   "main": "MMM-RAIN-MAP.js",
   "repository": {
